alignment issue fix

--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -575,3 +575,6 @@ table {
 .taglib-empty-result-message-header {
 	display: none;
 }
+b, strong{
+  font-family: $jmFont;
+}
