--- a/scss/_product.scss
+++ b/scss/_product.scss
@@ -22,6 +22,9 @@
     text-decoration: none;
     color: $jmWhiteColor;
   }
+  .panel__btntext{
+    width: 100%
+  }
 }
 .product__cont {
   a, a:hover{
